--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "jest": "^29.7.0"
-  }
+    "husky": "^4.3.8",
+    "jest": "^29.7.0",
+    "pre-commit": "^1.2.2"
+  },
+
+  "pre-commit": [
+    "test"
+  ]
 }
