--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "description": "",
   "devDependencies": {
     "husky": "^4.3.8",
-    "jest": "^29.7.0",
-    "pre-commit": "^1.2.2"
+    "i": "^0.3.7",
+    "jest": "^29.7.0"
   },
-
-  "pre-commit": [
-    "test"
-  ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  }
 }
