--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint src/**",
-    "lint-fix": "eslint src/** --fix"
+    "lint-fix": "eslint src/** --fix",
+    "success-message":"echo Thanks for commiting $GIT_AUTHOR_NAME"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,19 @@
   "devDependencies": {
     "husky": "^9.0.11",
     "i": "^0.3.7",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.2"
   },
-  "husky": {
-    "hooks": {
+  "husky":{
+    "hooks":{
+      "post-commit":"npm run success-message"
     }
+  },
+  
+  "lint-staged":{
+    "*.js":[
+      "eslint",
+      "jest --findRelatedTests"
+        ]
   }
 }
